Closed Bug 1211979 Opened 9 years ago Closed 9 years ago

Annotate crash reports triggered by MOZ_RELEASE_ASSERT in release builds

Categories

(Core :: MFBT, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
firefox44 --- fixed

People

(Reporter: nika, Assigned: nika)

References

Details

Attachments

(1 file)

This is the logical next step after bug 1183355 - MOZ_RELEASE_ASSERT is in less use than MOZ_CRASH (git grep suggests ~1773 instances), but should also be annotated. A few open questions remain, like whether MOZ_RELEASE_ASSERT should use MozCrashReason like MOZ_CRASH does, or if it should have its own field.
Doesn't MOZ_RELEASE_ASSERT just forward to MOZ_CRASH under the hood?
(In reply to David Major [:dmajor] from comment #1) > Doesn't MOZ_RELEASE_ASSERT just forward to MOZ_CRASH under the hood? MOZ_RELEASE_ASSERT uses MOZ_REALLY_CRASH to trigger the crash, but doesn't actually call MOZ_CRASH. It uses it's own reporting mechanism: https://dxr.mozilla.org/mozilla-central/source/mfbt/Assertions.h?case=true&from=MOZ_RELEASE_ASSERT#358-374 We have to annotate it separately.
Ah, that's unfortunate.
Assignee: nobody → michael
Attachment #8671545 - Flags: review?(nfroyd) → review+
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: