Bug 1211979 - Annotate crashes triggered by MOZ_RELEASE_ASSERT, r=froydnj